Distribuição binomial e exemplos

--- a/02 - Probabilidade_e_amostragem/Probabilidade_e_amostragem.ipynb
+++ b/02 - Probabilidade_e_amostragem/Probabilidade_e_amostragem.ipynb
@@ -189,29 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8QgOpE-wjQKl"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ufRZ7TLwjQKo"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dados = pd.read_csv('dados.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -222,8 +226,109 @@
     "outputId": "36b6565f-bb67-47b7-ea64-8d2695c60e6b",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cor</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1.603808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>1.739790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1.760444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>1.783158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1.690631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+       "0  11     0     23    8              12    800  1.603808\n",
+       "1  11     1     23    2              12   1150  1.739790\n",
+       "2  11     1     35    8              15    880  1.760444\n",
+       "3  11     0     46    2               6   3500  1.783158\n",
+       "4  11     1     47    8               9    150  1.690631"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -394,14 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-U2sGssNG3B4"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.special import comb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -460,12 +567,26 @@
     "id": "c2t7yHl7G3B9",
     "outputId": "6d1e9337-9d68-4866-9e48-3dbb3f81d07d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50063860.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combinacoes = comb(60,6)\n",
+    "combinacoes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -475,8 +596,19 @@
     "id": "LpioeTSXG3CB",
     "outputId": "d1e0ab82-be84-423c-e206-a9f8e1437df4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000000019974489\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = 1 / combinacoes\n",
+    "print(f'{probabilidade:.15f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -510,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -520,8 +652,22 @@
     "id": "WmnjMTnYG3CH",
     "outputId": "859f37e5-992a-4ccf-fbfb-4e2cf52c4373"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -575,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -585,8 +731,23 @@
     "id": "AazGDtt0G3CS",
     "outputId": "ccb9e561-0413-43c8-c462-ebea4b6c1097"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_de_alternativas_por_questao = 3\n",
+    "p = 1 / num_de_alternativas_por_questao\n",
+    "p"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -600,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -610,8 +771,22 @@
     "id": "FRhmjCnpG3CZ",
     "outputId": "f521f041-ecf4-4c4c-b696-da7b949d657a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666667"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = 1 - p\n",
+    "q"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -625,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -635,8 +810,22 @@
     "id": "MmHpiIIuG3Cj",
     "outputId": "6975cb4f-5cd3-4234-f7b0-b5d01ceb0430"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 5\n",
+    "k"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -650,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -660,8 +849,19 @@
     "id": "tZBbMIzKG3Cn",
     "outputId": "cb9ddc72-bd3a-40e6-f432-ad02048a3047"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13656455\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = (comb(n,k) * (p ** k) * (q**(n-k)) )\n",
+    "print(f'{probabilidade:.8f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -676,14 +876,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rhlsI3iLG3Cr"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import binom"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -697,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -707,8 +909,19 @@
     "id": "OjS1xsz5G3Cu",
     "outputId": "e5406623-9e3e-4d41-d1de-c774dc96bc17"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13656455\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print(f'{probabilidade:.8f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -726,31 +939,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909492"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.pmf(5, n, p) + binom.pmf(6, n, p) + binom.pmf(7, n, p) + binom.pmf(8, n, p) + binom.pmf(9, n, p) + binom.pmf(10, n, p)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909492"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.pmf([5, 6, 7, 8, 9, 10], n, p).sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909523"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - binom.cdf(4,n,p)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909525"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.sf(4, n, p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -784,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -794,12 +1059,26 @@
     "id": "Xw9b6ch3G3C1",
     "outputId": "b4bb8b11-5113-4cc9-bac1-59e9acaf67e6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = 0.6\n",
+    "p"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -809,12 +1088,26 @@
     "id": "R3-RaxP5G3C3",
     "outputId": "180b09ba-666e-47c9-b476-224c71fdd5c0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 12\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -824,12 +1117,26 @@
     "id": "otBHHyD0G3C6",
     "outputId": "c3bdd1ab-763a-43db-ec2e-fb890aa78e3f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 8\n",
+    "k"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -839,12 +1146,23 @@
     "id": "ZAoBvbQqG3C9",
     "outputId": "62d68ce0-f87f-4879-cc48-4358a7f23a68"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21284094\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print(f'{probabilidade:.8f}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -854,8 +1172,48 @@
     "id": "Tg53uGL4G3DA",
     "outputId": "cf68634d-68fd-41c5-a9a1-98c5ead8b548"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.3852281856"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equipes = 30 * probabilidade\n",
+    "equipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.662799999999996"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = .22\n",
+    "n = 3\n",
+    "k = 2\n",
+    "\n",
+    "probab = binom.pmf(k,n,p)\n",
+    "total = 50 * probab\n",
+    "total"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3520,7 +3878,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3534,7 +3892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
