Distribuição de poisson e exemplos

--- a/02 - Probabilidade_e_amostragem/Probabilidade_e_amostragem.ipynb
+++ b/02 - Probabilidade_e_amostragem/Probabilidade_e_amostragem.ipynb
@@ -1190,32 +1190,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.662799999999996"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p = .22\n",
-    "n = 3\n",
-    "k = 2\n",
-    "\n",
-    "probab = binom.pmf(k,n,p)\n",
-    "total = 50 * probab\n",
-    "total"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -1366,18 +1340,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "w23fjVT-G3DS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1387,8 +1363,21 @@
     "id": "rdNqMuFNG3DU",
     "outputId": "fad8f9cf-efe3-44e4-8bd3-7495c4161845"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1422,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1432,8 +1421,22 @@
     "id": "2fVfJxdSG3DY",
     "outputId": "5f93f4cb-eef7-459d-836c-eb825cf3f1d5"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = 20\n",
+    "media"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1447,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1457,8 +1460,22 @@
     "id": "yXB3QhWyG3Da",
     "outputId": "70e860fe-353f-43ba-98e9-0976282de023"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 15\n",
+    "k"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1472,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1482,8 +1499,19 @@
     "id": "IEGO31WCG3Df",
     "outputId": "3ededd4d-1b97-428a-ad3f-1b8facfc3e38"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05164885\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))\n",
+    "print(f'{probabilidade:.8f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1517,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1527,8 +1555,21 @@
     "id": "sNw4oCAyG3Dk",
     "outputId": "21ded08e-1fc3-4315-c608-9c016af07e86"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05164885\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import poisson\n",
+    "\n",
+    "probabilidade  = poisson.pmf(k, media)\n",
+    "print(f'{probabilidade:.8f}')"
+   ]
   },
   {
    "cell_type": "markdown",
