--- a/02 - Probabilidade_e_amostragem/Projeto_estimativas.ipynb
+++ b/02 - Probabilidade_e_amostragem/Projeto_estimativas.ipynb
@@ -192,25 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "itHvj-WRKa86"
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "fcTgimHBybMz"
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.stats import binom, norm"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,14 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ufRZ7TLwjQKo"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dados = pd.read_csv('dados.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,15 +240,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "GsC_WhLFjQKq",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cor</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1.603808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>1.739790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1.760444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>1.783158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1.690631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+       "0  11     0     23    8              12    800  1.603808\n",
+       "1  11     1     23    2              12   1150  1.739790\n",
+       "2  11     1     35    8              15    880  1.760444\n",
+       "3  11     0     46    2               6   3500  1.783158\n",
+       "4  11     1     47    8               9    150  1.690631"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,47 +387,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "lbDcyHPTKa9J"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "k = 7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0_4L_QOnKa9L"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 10"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rl7sfPTYKa9N"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "p = 0.70"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "2LQ5lVzoKa9P"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.68279320%\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print(f'{probabilidade:.8%}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,14 +480,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "F27eIYXzKa9T"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "375"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = n*p\n",
+    "n = media /p\n",
+    "\n",
+    "n = 100 / probabilidade\n",
+    "n = int(n.round())\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -441,36 +572,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_HxUH0AhKa9X"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = dados.Renda.sample(n = 200, random_state=101)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "fJBYID7pKa9Z"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1964.205"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "BXkTyV07Ka9c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3139.8855167452093"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.std()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -484,14 +643,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "daBvAiqbKa9g"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "media_amostra = dataset.mean()\n",
+    "desvio_padrao_amostra = dataset.std()\n",
+    "recursos = 150000\n",
+    "custo_entrevista = 100"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -517,14 +681,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "m5s5DvDuKa9j"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196.4205"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = 0.1 * media_amostra\n",
+    "e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -538,18 +716,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-BteoZ6JKa9m"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.95"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.9/2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -559,20 +750,21 @@
    "outputs": [
     {
      "data": {
-      "text/markdown": [
-       "Para um **nível de confiança de 90%** devemos selecionar uma amostra de **691 elementos**."
-      ],
       "text/plain": [
-       "<IPython.core.display.Markdown object>"
+       "691"
       ]
      },
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "display_data"
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "z = norm.ppf(.95)\n",
+    "n_confianca_90 = (z*(desvio_padrao_amostra/e)) ** 2\n",
+    "n_confianca_90 = int(n_confianca_90.round())\n",
+    "n_confianca_90"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,25 +778,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8NtV47kVKa9q"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.975"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.95 / 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "keyN_N8xKa9w"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "982"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(.975)\n",
+    "n_confianca_95 = (z*(desvio_padrao_amostra/e)) ** 2\n",
+    "n_confianca_95 = int(n_confianca_95.round())\n",
+    "n_confianca_95"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -618,25 +839,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "dvFHNFsLKa9y"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.995"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.99 / 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "eTCtwDw_Ka90"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1695"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(.995)\n",
+    "n_confianca_99 = (z*(desvio_padrao_amostra/e)) ** 2\n",
+    "n_confianca_99 = int(n_confianca_99.round())\n",
+    "n_confianca_99"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -660,14 +910,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "j_0BpUBMKa95"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69100"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custo_confianca_90 = n_confianca_90 * custo_entrevista\n",
+    "custo_confianca_90"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -681,14 +945,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "R4YQV7_EKa97"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98200"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custo_confianca_95 = n_confianca_95 * custo_entrevista\n",
+    "custo_confianca_95"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -702,14 +980,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "7fZucTJIKa9-"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "169500"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custo_confianca_99 = n_confianca_99 * custo_entrevista\n",
+    "custo_confianca_99"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -723,14 +1015,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uTePzAGQKa-B"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1767.8209732805094, 2160.5890267194904)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intervalo = norm.interval(alpha=0.95, loc=media_amostra, scale=desvio_padrao_amostra/ np.sqrt(n_confianca_95))\n",
+    "intervalo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -744,36 +1050,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "AaGOyW4pKa-E"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1500.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_confianca_95 = recursos / custo_entrevista\n",
+    "n_confianca_95"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "31angNvBKa-G"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "158.89721122673703"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z= norm.ppf(.975)\n",
+    "e = z * (desvio_padrao_amostra /np.sqrt(n_confianca_95))\n",
+    "e"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "SMIRTmytKa-I"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.089644982409526"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e_percentual = e / media_amostra\n",
+    "e_percentual * 100"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -787,36 +1136,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "U0f55DxHKa-K"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98.21025"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = 0.05 * media_amostra\n",
+    "e"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "PDt0rtCZKa-M"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3927"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(.975)\n",
+    "n_confianca_95 = (z*(desvio_padrao_amostra/e)) ** 2\n",
+    "n_confianca_95 = int(n_confianca_95.round())\n",
+    "n_confianca_95"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "c81OsbN1Ka-R"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "392,700\n"
+     ]
+    }
+   ],
+   "source": [
+    "custo_confianca_95 = n_confianca_95 * custo_entrevista\n",
+    "print(f'{custo_confianca_95:,}')"
+   ]
   },
   {
    "cell_type": "code",
@@ -838,7 +1228,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -852,7 +1242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
