Teste de Wilcoxon

--- a/03 - Testes_de_hipóteses/Testes_de_hipóteses.ipynb
+++ b/03 - Testes_de_hipóteses/Testes_de_hipóteses.ipynb
@@ -7721,18 +7721,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "bgWrxnBmpsmp"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import wilcoxon"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7742,12 +7744,26 @@
     "id": "PsdWRoHCpsmp",
     "outputId": "c3ccd57c-5423-4d5d-b136-b84b8d627a7b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22.0, 1.584310018505865e-06)"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T, p_valor = wilcoxon(fumo.Antes, fumo.Depois)\n",
+    "T, p_valor "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7758,7 +7774,18 @@
     "outputId": "f111c5d0-c448-40d3-f4ee-f39e7b3a3dc3",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p_valor <= significancia"
    ]
